# spacetco_2

./: CITATION.cff  Cargo.toml  LICENSE-MIT  readme.md
scripts/: polyhedral_falsifiability.py
src/: main.rs
