[package]
name = "spacetco_2"
version = "0.1.0"
edition = "2024"
authors = ["Neil Crago <n.j.crago@gmail.com>"]
description = "SpaceTCO Unified Field Architecture: A Deterministic Geometric Framework for Physics, Computation, and Cognition"
license = "MIT"
repository = "https://github.com/Neil-Crago/SpaceTCO_2"

[dependencies]
num-complex = "0.4.6"
rustfft = "6.4.1"
